(library
 (public_name notty-miou)
 (name notty_miou)
 (modules notty_miou)
 (wrapped false)
 (foreign_stubs
  (language c)
  (names winsize)
  (flags
   (:standard -Wall -Wextra -O3)))
 (libraries notty miou miou.unix))

(library
 (public_name nottui-miou)
 (name nottui_miou)
 (modules nottui_miou)
 (libraries nottui notty-miou))
